# lsh-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  note.md
src/: main.cpp
src/benchmark/: benchmark.h  data_loader.h  dna_benchmark.h  lsh_benchmark.h  main.cpp  minhash_benchmark.h  weight_minhash_benchmark.h
src/include/: config.h  hash.h  io.h  k_shingles.h  lru_cache.h  lsh.h  lsh_cosine_similarity.h  lsh_cpp.h  minhash.h  portability.h  test.cpp  test.h  time.h  time_def.h  util.h  weight_minhash.h  weight_minhash_unsupport.h
src/test/: main.cpp  test.h
